Update UI and using env to store connectionstring

--- a/NOTE.APP/NOTE.APP.Server/appsettings.Development.json
+++ b/NOTE.APP/NOTE.APP.Server/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=PHANET;Database=NOTE;User Id=sa;Password=@dmin123;TrustServerCertificate=True;"
+    //"DefaultConnection": "Server=;Database=NOTE;User Id=sa;Password=@;TrustServerCertificate=True;",
+    //"DefaultConnection": "Server={0};Database={1};User Id={2};Password={3};TrustServerCertificate=True;"
   }
 }
