--- a/NOTE.APP/note.app.client/package.json
+++ b/NOTE.APP/note.app.client/package.json
@@ -2,6 +2,7 @@
   "name": "note.app.client",
   "version": "0.0.0",
   "private": true,
+  "homepage": "https://heangphanet.github.io/NOTE/",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -13,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "gh-pages": "^6.3.0",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
